# tellstore

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  TellStoreConfig.cmake.in  config.h.in  implementation.hpp  main.cpp  tellstore.hpp
client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientConfig.hpp  ClientManager.cpp  ClientManager.hpp  ClientSocket.cpp  ClientSocket.hpp  ErrorCode.hpp  ScanMemory.cpp  ServerConnection.cpp  ServerConnection.hpp  Table.cpp  Table.hpp  TransactionManager.cpp  TransactionManager.hpp  TransactionRunner.cpp  main.cpp
cmake/: FindJemalloc.cmake  FindSparsehash.cmake  FindTBB.cmake
common/: CMakeLists.txt  GenericTuple.cpp  MessageTypes.cpp  Record.cpp
deltamain/: CMakeLists.txt  ColumnMapRecord.cpp  DeltaMainRewriteStore.hpp  InsertHash.cpp  InsertHash.hpp  InsertMap.hpp  LogRecord.hpp  LogRecord.in.cpp  Page.cpp  Page.hpp  Record.cpp  Record.hpp  RowStoreRecord.cpp  Table.cpp  Table.hpp  table.cpp  table.hpp
deltamain/colstore/: ColumnMapContext.cpp  ColumnMapContext.hpp  ColumnMapPage.cpp  ColumnMapPage.hpp  ColumnMapRecord.cpp  ColumnMapRecord.hpp  ColumnMapRecord.in  ColumnMapRecord.in.cpp  ColumnMapScanProcessor.cpp  ColumnMapScanProcessor.hpp  ColumnMapUtils.hpp  ColumnMapUtils.in  ColumnMapUtils.in.cpp  LLVMColumnMapAggregation.cpp  LLVMColumnMapAggregation.hpp  LLVMColumnMapMaterialize.cpp  LLVMColumnMapMaterialize.hpp  LLVMColumnMapProjection.cpp  LLVMColumnMapProjection.hpp  LLVMColumnMapScan.cpp  LLVMColumnMapScan.hpp  LLVMColumnMapUtils.cpp  LLVMColumnMapUtils.hpp
deltamain/rowstore/: RowStoreContext.hpp  RowStorePage.cpp  RowStorePage.hpp  RowStoreRecord.cpp  RowStoreRecord.hpp  RowStoreRecord.in  RowStoreRecord.in.cpp  RowStoreScanProcessor.cpp  RowStoreScanProcessor.hpp  RowStoreVersionIterator.cpp  RowStoreVersionIterator.hpp  RowStoreVersionIterator.imp  RowStoreVersionIterator.imp.cpp  RowStoreVersionIterator.in.cpp
deltamainrewrite/: DMLog.cpp  DMLog.hpp  DMRecord.cpp  DMRecord.hpp  LogOperations.cpp  LogOperations.hpp  Page.cpp  Page.hpp  dmrewrite.cpp  dmrewrite.hpp
logstructured/: CMakeLists.txt  ChainedVersionRecord.hpp  GcScanProcessor.cpp  GcScanProcessor.hpp  HashScanProcessor.cpp  HashScanProcessor.hpp  LogstructuredMemoryStore.hpp  OpenAddressingHash.cpp  OpenAddressingHash.hpp  Record.hpp  Table.cpp  Table.hpp  VersionRecordIterator.cpp  VersionRecordIterator.hpp
network/: CMakeLists.txt  ErrorCode.hpp  MessageSocket.hpp  MessageTypes.hpp  MessageWriter.cpp  MessageWriter.hpp
playground/: CMakeLists.txt  llvm.cpp  optimizer-example.cpp  simd.cpp
playground/include/: KaleidoscopeJIT.h
server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.hpp  ClientScanQuery.cpp  ClientScanQuery.hpp  ConnectionManager.cpp  ConnectionManager.hpp  RpcMessages.proto  ServerConfig.hpp  ServerScanQuery.cpp  ServerScanQuery.hpp  ServerSocket.cpp  ServerSocket.hpp  Storage.hpp  main.cpp
tellstore/: AbstractTuple.hpp  ClientConfig.hpp  ClientManager.hpp  ClientSocket.hpp  ErrorCode.hpp  GenericTuple.hpp  MessageTypes.hpp  Record.hpp  ScanMemory.hpp  StdTypes.hpp  Table.hpp  TransactionRunner.hpp  TransactionType.hpp
tests/: CMakeLists.txt  DummyCommitManager.cpp  DummyCommitManager.hpp  main.cpp  simpleTests.cpp  testCommitManager.cpp  testCuckooMap.cpp  testLLVMCodeGenerator.cpp  testLog.cpp  testOpenAddressingHash.cpp  testQueryBufferScan.cpp  testScanQuery.cpp
tests/client/: TestClient.cpp
tests/deltamain/: testInsertHash.cpp
tests/logstructured/: testOpenAddressingHash.cpp  testTable.cpp
util/: Allocator.cpp  Allocator.hpp  CMakeLists.txt  CommitManager.cpp  CommitManager.hpp  CuckooHash.cpp  CuckooHash.hpp  Epoch.cpp  Epoch.hpp  ErrorCode.hpp  FixedSizeStack.hpp  IteratorEntry.hpp  LLVMBuilder.cpp  LLVMBuilder.hpp  LLVMCodeGenerator.cpp  LLVMCodeGenerator.hpp  LLVMJIT.cpp  LLVMJIT.hpp  LLVMRowAggregation.cpp  LLVMRowAggregation.hpp  LLVMRowProjection.cpp  LLVMRowProjection.hpp  LLVMRowScan.cpp  LLVMRowScan.hpp  LLVMScan.cpp  LLVMScan.hpp  Log.cpp  Log.hpp  LogOperations.cpp  LogOperations.hpp  Logging.cpp  Logging.hpp  MessageWriter.hpp  NonCopyable.hpp  OpenAddressingHash.cpp  OpenAddressingHash.hpp  PageManager.cpp  PageManager.hpp  PredicateBitmap.hpp  QueryBufferScan.cpp  (+20 more)
util/sparsehash/: dense_hash_map  template_util.h  type_traits.h
util/sparsehash/internal/: densehashtable.h  hashtable-common.h  libc_allocator_with_realloc.h  sparseconfig.h  sparsehashtable.h
